--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
 
 
@@ -58,10 +60,26 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
 
-</script>
+
+  <script>
+
+    window.addEventListener('keydown', function (e) {
+      let btn  = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+      btn.classList.add('playing')
+      setTimeout(() => {
+        
+        btn.classList.remove('playing')
+      }, 100);
+      let audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      // console.log(audio);
+      if(!audio)return;
+      audio.currentTime = 0;
+      audio.play()
+    })
+  </script>
 
 
 </body>
+
 </html>
